#
# Copyright (c) 2020      Sandia National Laboratories. All rights reserved.
# Copyright (c) 2026      High Performance Computing Center Stuttgart,
#                         University of Stuttgart.  All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#


headers += \
        aggregation_schemes/aggregation_scheme_regular.h \
        aggregation_schemes/aggregation_scheme_interval_tree.h 

libmca_part_la_SOURCES += \
        aggregation_schemes/aggregation_scheme_regular.c \
        aggregation_schemes/aggregation_scheme_interval_tree.c 


